<?xml version="1.0" encoding="UTF-8" ?>
<resources>
    <string name="app_name">Reminisce</string>

    <style name="testMessage">Test</style>

    <string name="nav_main_home">홈</string>
    <string name="nav_main_map">지도</string>
    <string name="nav_main_report">추억</string>
    <string name="nav_main_setting">설정</string>

    <string name="email"> 이메일</string>
    <string name="password">비밀번호</string>
    <string name="nickname">닉네임</string>

    <string name="greeting_sign_up">회원가입</string>
    <string name="greeting_sign_in">이미 계정이 있으신가요?</string>

    <string name="sign_up_password">비밀번호(5자 이상 입력해 주세요)</string>
    <string name="sign_in_reset_password">비밀번호 찾기</string>
    <string name="sign_in_auto_login">자동 로그인</string>
    <string name="sign_in_login">로그인</string>


    <string name="card_summary_title">남동 오피스파크</string>
    <string name="card_summary_item_body">인천광역시 남동구 은청로 18 남동상공센타 2층</string>
    <string name="card_date_separator">%s년 %s월</string>
    <string name="card_visited_at">%s년 %s월 %s일</string>

    <string name="appbar_title">Title</string>
    <string name="appbar_button_text">완료</string>

    <string name="home_header">Nav Title</string>
    <string name="home_header_sub">action</string>

    <string name="folder_detail_category">Category Name</string>
    <string name="basic_category_item">인천광역시</string>

    <string name="category_view_holder_title">한눈에 보기</string>

    <!-- Use Setting -->
    <string name="setting_account">프로필 설정</string>
    <string name="setting_account_detail_nickname_title">닉네임 설정</string>
    <string name="setting_account_detail_password_title">비밀번호 설정</string>
    <string name="setting_account_detail_password_placeholder_text">5자 이상 입력해 주세요.</string>
    <string name="setting_account_service_withdraw">서비스 탈퇴하기</string>
    <string name="setting_sign_out_body">오늘추억에서 로그아웃 할까요?</string>
    <string name="setting_sign_out_error">로그아웃에 실패했어요.</string>


    <string name="add_friend_title">친구 검색</string>
    <string name="add_friend_placeholder_text">오늘추억 사용자 이메일을 검색해 보세요</string>
    <string name="add_friend_helper_text">내 이메일 : %s</string>
    <string name="add_friend_question">%s님을 친구로 등록할까요?</string>
    <string name="setting_friend">친구 관리</string>
    <string name="add_friend_error">친구 등록에 실패했어요. 다시 시도해 주세요.</string>
    <string name="add_friend_conflict">이미 등록된 친구예요.</string>
    <string name="add_friend_bad_request">자신은 친구로 등록할 수 없어요.</string>
    <string name="setting_signout">로그아웃</string>

    <string name="setting_activity_header">Setting</string>
    <string name="setting_friend_item">friend nickname</string>
    <string name="friend_setting_activity_appbar_title">친구 목록</string>

    <!-- Dialog Message && Dialog Button -->
    <string name="dialog_sign_in_error_title">로그인 오류</string>
    <string name="dialog_sign_in_error_body">로그인 정보를 확인해 주세요.</string>

    <string name="dialog_sign_up_message_title">회원가입 성공</string>
    <string name="dialog_sign_up_message_body">회원가입에 성공했어요! \n오늘부터 함께 추억을 쌓아 볼까요?</string>

    <string name="dialog_sign_up_error_title">회원가입 실패</string>
    <string name="dialog_sign_up_error_body">이미 가입된 이메일이에요.</string>

    <string name="dialog_ok">확인</string>
    <string name="dialog_cancel">취소</string>
    <string name="dialog_remove">삭제</string>
    <string name="dialog_save">저장</string>
    <string name="dialog_add">추가</string>
    <string name="dialog_withdraw">탈퇴</string>

    <string name="dialog_summary_delete">추억 삭제</string>
    <string name="dialog_summary_delete_body">기록을 삭제할까요?</string>

    <string name="dialog_add_friend_title">친구 추가</string>
    <string name="dialog_add_friend_body">친구로 등록할까요?</string>

    <string name="dialog_delete_home_category_title">폴더 삭제</string>
    <string name="dialog_delete_home_category_body">폴더를 삭제하시겠어요? \n폴더 안에 저장된 모든 추억들이 함께 지워져요.</string>

    <string name="dialog_delete_friend_title">친구 삭제</string>
    <string name="dialog_delete_friend_body">친구를 삭제하시겠어요? \n태그된 모든 추억에서도 함께 지워져요.</string>

    <string name="dialog_delete_tag_title">태그 삭제</string>
    <string name="dialog_delete_tag_body">태그를 삭제하시겠어요? \n태그된 모든 추억에서도 함께 지워져요.</string>

    <string name="dialog_stop_writing_title">그만 작성하기</string>
    <string name="dialog_stop_writing_body">지금 작성하던 내용은 저장되지 않아요.</string>
    <string name="dialog_stop_writing_ok">네</string>
    <string name="dialog_stop_writing_cancel">아니요</string>

    <string name="dialog_select_category_title">폴더 선택</string>
    <string name="dialog_select_emoji_title">이모지 추가</string>
    <string name="dialog_select_emoji_placeholder_text">지도에 표시될 이모지</string>
    <string name="dialog_select_visited_at_title">방문일 선택</string>

    <string name="dialog_update_friend_nickname">닉네임 편집</string>
    <string name="dialog_update_friend_nickname_placeholder_text">original friend nickname</string>
    <string name="dialog_update_friend_nickname_helper_text">friend email</string>

    <string name="dialog_withdraw_title">서비스 탈퇴</string>
    <string name="dialog_withdraw_body">오늘추억을 탈퇴하시겠어요?\n\n- 기록된 모든 추억은 복구할 수 없어요.\n- 해당 이메일로 재가입이 어려워요.</string>

    <string name="dialog_error_common_title">오류 발생</string>
    <string name="dialog_error_common_body">오류가 발생했어요. 오늘추억을 재실행 해주세요.</string>
    <string name="dialog_error_common_list_body">목록을 불러오는데 실패했어요. \n다시 실행해 주세요.</string>
    <string name="dialog_error_add_folder">폴더를 추가하는데 실패했어요. \n다시 시도해 주세요.</string>
    <string name="dialog_error_tag_load">태그를 불러오는데 실패했어요. \n다시 시도해 주세요.</string>

    <!-- Use Writer -->
    <string name="card_category_item_body">100</string>
    <string name="card_category_item_title">Category Name</string>
    <string name="card_home_tag_city_title">어디에서</string>
    <string name="card_home_tag_friend_title">누구와</string>
    <string name="card_home_tag_title">태그</string>
    <string name="card_category_detail_header_placeholder_text">original category name</string>

    <string name="header_view_holder_title">홈</string>
    <string name="header_view_holder_action">추가</string>
    <string name="add_category_title">폴더 추가</string>
    <string name="add_category_body">새로운 폴더</string>
    <string name="header_action">편집</string>

    <string name="layout_not_found">검색 결과가 없어요.</string>

    <string name="write_visited_at">언제</string>
    <string name="write_location">어디에서</string>
    <string name="write_emoji">지도에 표시될 이모지</string>
    <string name="write_friend">누구와</string>
    <string name="write_hashtag">해시태그</string>
    <string name="write_category">카테고리</string>
    <string name="error_location_miss">방문 장소를 선택해 주세요.</string>
    <string name="error_visited_at_miss">날짜를 다시 입력해 주세요.</string>

    <string name="category_title_edit_appbar">폴더 이름 변경</string>
    <string name="message_account_setting_detail_nickname">닉네임이 변경되었어요.</string>
    <string name="error_get_nickname">닉네임을 불러올 수 없어요.</string>

    <string name="write_option">Options</string>
    <string name="write_date">Date</string>
    <string name="write_location_title">Location</string>
    <string name="writer_options_category">폴더</string>
    <string name="write_options_add_tag_title">해시태그 추가</string>
    <string name="write_options_add_tag_new_tag_container">저장할 해시태그</string>
    <string name="write_options_add_tag_old_tag_container">이전에 사용된 해시태그</string>
    <string name="write_options_add_tag_placeholderText">해시태그 입력 후 엔터를 입력해주세요.</string>

    <string name="visited_at_format">%d%d%d%d-%d%d-%d%d</string>
    <string name="visit_count_format">%s %s %d번째 추억</string>
    <string name="write_options_success_date_message">%s년 %s월 %s일에 다녀온</string>
    <string name="write_options_success_location_message">"%s" 추억이 저장되었어요!</string>
    <string name="write_options_next_button">더욱 다양한 추억을 기록해 보세요</string>
    <string name="write_options_select_category_title">카테고리 선택</string>

    <!-- Use Map -->
    <string name="map_header_search_title">어디를 다녀오셨나요?</string>
    <string name="dialog_marker_detail_next">저장된 추억</string>


    <!-- Use Report -->
    <string name="report_ocean">해수욕장</string>
    <string name="report_ocean_body">%d / 227</string>
    <string name="report_service_area">휴게소</string>
    <string name="report_service_area_body"> %d / 205</string>
    <string name="report_most_added_friend">가장 많이 태그된 친구</string>
    <string name="report_month">이번 달에 저장된 추억</string>
    <string name="report_year_ago">1년 전 오늘</string>
    <string name="report_category_korea">국내여행</string>
    <string name="report_year_ago_body">2022-11-22</string>

</resources>