<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/dialog_update_friend_nickname_handle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/dialog_update_friend_nickname_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_large"
        android:fontFamily="@font/pretendard_medium"
        android:text="@string/dialog_update_friend_nickname"
        android:textSize="@dimen/headline_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_update_friend_nickname_handle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_update_friend_nickname_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_2xlarge"
        android:layout_marginTop="@dimen/margin_regular"
        app:boxStrokeColor="@color/md_theme_light_primary"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:endIconMode="clear_text"
        app:helperText="@string/dialog_update_friend_nickname_helper_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_update_friend_nickname_title"
        app:placeholderText="@string/dialog_update_friend_nickname_placeholder_text">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendard_medium"
            android:inputType="date"
            android:maxLength="10"
            android:textSize="@dimen/body_large" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_update_friend_nickname_cancel"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_regular"
        android:layout_marginBottom="@dimen/margin_large"
        android:fontFamily="@font/pretendard_medium"
        android:text="@string/dialog_cancel"
        android:textColor="@color/md_theme_light_error"
        android:textSize="@dimen/label_large"
        app:layout_constraintEnd_toStartOf="@id/dialog_update_friend_nickname_save"
        app:layout_constraintTop_toBottomOf="@id/dialog_update_friend_nickname_field" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_update_friend_nickname_save"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_regular"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_large"
        android:enabled="false"
        android:fontFamily="@font/pretendard_medium"
        android:text="@string/dialog_save"
        android:textSize="@dimen/label_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_update_friend_nickname_field" />
</androidx.constraintlayout.widget.ConstraintLayout>