<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/dialog_add_category_handle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/dialog_add_category_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_large"
        android:fontFamily="@font/pretendard_medium"
        android:text="@string/add_category_title"
        android:textSize="@dimen/headline_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_add_category_handle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_add_category_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_2xlarge"
        android:layout_marginTop="@dimen/margin_regular"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        app:endIconCheckable="true"
        app:endIconMode="clear_text"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_add_category_title">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendard_medium"
            android:hint="@string/add_category_body"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="@dimen/body_large" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_add_category_cancel"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_regular"
        android:layout_marginBottom="@dimen/margin_large"
        android:fontFamily="@font/pretendard_medium"
        android:text="@string/dialog_cancel"
        android:textColor="@color/md_theme_light_error"
        android:textSize="@dimen/label_large"
        app:layout_constraintEnd_toStartOf="@id/dialog_add_category_save"
        app:layout_constraintTop_toBottomOf="@id/dialog_add_category_field" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_add_category_save"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_regular"
        android:layout_marginBottom="@dimen/margin_large"
        android:fontFamily="@font/pretendard_medium"
        android:text="@string/dialog_save"
        android:textSize="@dimen/label_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/dialog_add_category_field"
        app:layout_constraintTop_toBottomOf="@id/dialog_add_category_field" />
</androidx.constraintlayout.widget.ConstraintLayout>