<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/dialog_sign_in_error_handle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/dialog_sign_in_error_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_large"
        android:fontFamily="@font/pretendard_medium"
        android:text="@string/dialog_sign_in_error_title"
        android:textSize="@dimen/headline_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_sign_in_error_handle" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/dialog_sign_in_error_body"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_2xlarge"
        android:layout_marginTop="@dimen/margin_regular"
        android:layout_marginBottom="@dimen/margin_regular"
        android:fontFamily="@font/pretendard_regular"
        android:text="@string/dialog_sign_in_error_body"
        android:textColor="@color/md_theme_light_onSurfaceVariant"
        android:textSize="@dimen/body_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_sign_in_error_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_sign_in_error_ok"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_regular"
        android:layout_marginBottom="@dimen/margin_large"
        android:fontFamily="@font/pretendard_medium"
        android:text="@string/dialog_ok"
        android:textColor="@color/md_theme_light_error"
        android:textSize="@dimen/label_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/dialog_sign_in_error_body"
        app:layout_constraintTop_toBottomOf="@id/dialog_sign_in_error_body" />
</androidx.constraintlayout.widget.ConstraintLayout>